--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 name: Sg3.io, Anleitungen, Projekte und Gedanken zur Digitalisierung.
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
