--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: Sg3.io, Anleitungen, Projekte und Gedanken zur Digitalisierung.
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+
+theme: jekyll-theme-tactile
