--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ theme: jekyll-theme-tactile
 
 
 
-title:             Sg3.io, Anleitungen, Projekte und Gedanken zur Digitalisierung.
+title:             Sg3.ch, Anleitungen, Projekte und Gedanken zur Digitalisierung.
 email:             me@simongasser.com
 description:       A Blog Theme by Start Bootstrap
 author:            sigasser
