Team Bilder hochladen

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ people:
       url: https://twitter.com/sigasser
     - title: mail
       url: mailto:simon@simon-gasser.ch
-    - title: Kalender
+    - title: calendar
       url: https://www.supersaas.de/schedule/simon_gasser_gmbh/Simon_Gasser
 
 - name: Michael Mächler
