Hintergrundbild Über Uns

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ people:
   social:
     - title: twitter
       url: https://twitter.com/sigasser
-    - title: mail
+    - title: email
       url: mailto:simon@simon-gasser.ch
     - title: calendar
       url: https://www.supersaas.de/schedule/simon_gasser_gmbh/Simon_Gasser
@@ -46,9 +46,9 @@ people:
   pic: 2
   position: Elektro-Sicherheitsberater
   social:
-    - title: mail
+    - title: email
       url: mailto:michael@simon-gasser.ch
-    - title: Kalender
+    - title: calendar
       url: https://www.supersaas.de/schedule/simon_gasser_gmbh/Michael_Maechler
 
 
@@ -56,5 +56,5 @@ people:
   pic: 3
   position: Buchhaltung
   social:
-    - title: mail
+    - title: email
       url: mailto:rachel@simon-gasser.ch
