--- a/_config.yml
+++ b/_config.yml
@@ -37,18 +37,18 @@ people:
   social:
     - title: twitter
       url: https://twitter.com/sigasser
-    - title: email
+    - title: envelope-o
       url: mailto:simon@simon-gasser.ch
-    - title: calendar
+    - title: calendar-check-o
       url: https://www.supersaas.de/schedule/simon_gasser_gmbh/Simon_Gasser
 
 - name: Michael Mächler
   pic: 2
   position: Elektro-Sicherheitsberater
   social:
-    - title: email
+    - title: envelope-o
       url: mailto:michael@simon-gasser.ch
-    - title: calendar
+    - title: calendar-check-o
       url: https://www.supersaas.de/schedule/simon_gasser_gmbh/Michael_Maechler
 
 
@@ -56,5 +56,5 @@ people:
   pic: 3
   position: Buchhaltung
   social:
-    - title: email
+    - title: envelope-o
       url: mailto:rachel@simon-gasser.ch
