--- a/_config.yml
+++ b/_config.yml
@@ -10,16 +10,16 @@ theme: jekyll-theme-tactile
 
 
 
-title:             erstpruefung.ch,
-email:             kurs@simongasser.com
-description:       Eine Praxisnahe Anleitung für die Erstprüfung nach NIV Art. 24.
+title:             Sg3.ch,
+email:             me@simongasser.com
+description:       Anleitungen, Projekte und Gedanken zur Digitalisierung.
 author:            sigasser
 baseurl:           "/"
-url:               "https://erstpruefung.ch"
+url:               "https://sigasser.github.io"
 
 # Social Profiles
 twitter_username:  sigasser
-github_username:
+github_username:   sigasser
 
 # Build settings
 markdown:          kramdown
